--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
     </queries>
     <application
         android:name=".ParseApplication"
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/instagram_icon"
         android:label="@string/app_name"
+
         android:roundIcon="@mipmap/instagram_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.SimpleInstagram">
